--- a/user/themes/hafca/scss/app.scss
+++ b/user/themes/hafca/scss/app.scss
@@ -3,6 +3,7 @@
 @import 'settings';
 @import 'foundation';
 @import 'motion-ui';
+@import 'fonts';
 
 @include foundation-global-styles;
 @include foundation-grid;
@@ -48,3 +49,5 @@
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
+
+@import 'custom';
