--- a/user/themes/hafca/templates/default.html.twig
+++ b/user/themes/hafca/templates/default.html.twig
@@ -1,5 +1,9 @@
 {% extends 'partials/base.html.twig' %}
 
 {% block content %}
+  <h4>{{ page.title }}</h4>
+  <hr />
+  <div>
     {{ page.content }}
+  </div>
 {% endblock %}
