--- a/user/themes/hafca/templates/partials/footer.html.twig
+++ b/user/themes/hafca/templates/partials/footer.html.twig
@@ -47,5 +47,5 @@
       <p><a href="mailto:Info@HaightAshburyArchives.org">Info@HaightAshburyArchives.org</a></p>
     </div>
   </div>
-  <p class="copyright text-center">Copyright © 2016 David E. Smith Family Foundation. All right reserved.</p>
+  <p class="copyright text-center">Copyright &copy; {{ "now"|date("Y") }} David E. Smith Family Foundation. All right reserved.</p>
 </footer>
