Additional templates for listings type pages. Body class support added to base twig template. Begin organizing SCSS files separately. Added breadcrumbs. Added global photo subhead.

--- a/user/themes/hafca/templates/partials/base.html.twig
+++ b/user/themes/hafca/templates/partials/base.html.twig
@@ -32,18 +32,31 @@
         {% endblock head %}
     </head>
 
-      <body>
+      <body id="top" class="{{ page.header.body_classes }}">
 
         {# include the header + navigation #}
         {% include 'partials/header.html.twig' %}
 
         <div id="main">
+
+          {% include 'partials/subheader.html.twig' %}
+
           <div class="colorful row column"></div>
+
           <div class="row">
+
             <div id="content" class="small-12 column">
+
+              {% if config.plugins.breadcrumbs.enabled %}
+        				{% include 'partials/breadcrumbs.html.twig' %}
+        			{% endif %}
+
               {% block content %}{% endblock %}
+
             </div>
+
           </div>
+
         </div>
 
         {% include 'partials/footer.html.twig' %}
