--- a/user/themes/hafca/templates/partials/footer.html.twig
+++ b/user/themes/hafca/templates/partials/footer.html.twig
@@ -1,4 +1,4 @@
-<div class="colorful row full-width margin-top"></div>
+<div class="colorful row full-width"></div>
 
 <!-- Footer -->
 <footer class="footer" id="footer">
