--- a/user/themes/hafca/css/app.css
+++ b/user/themes/hafca/css/app.css
@@ -4207,8 +4207,11 @@ body:before {
   top: 0;
   left: 0;
   right: 0;
-  height: 37.5rem;
+  height: 100%;
   opacity: .3; }
+
+body #content {
+  box-shadow: 0px -5px 10px 10px rgba(0, 0, 0, 0.25); }
 
 .top-bar {
   border-top: 3px solid #763C8E;
@@ -4221,8 +4224,14 @@ body:before {
     background: transparent; }
     .top-bar .top-bar-title #logo {
       margin: 0.1875rem 0; }
+    .top-bar .top-bar-title .site-title {
+      display: none; }
+      @media screen and (max-width: 39.9375em) {
+        .top-bar .top-bar-title .site-title {
+          display: inline; } }
     @media screen and (max-width: 39.9375em) {
       .top-bar .top-bar-title {
+        padding: 1rem 0;
         line-height: inherit;
         width: 100%;
         font-size: 14px; } }
@@ -4255,7 +4264,7 @@ body:before {
         height: 100%;
         padding-top: 20px; }
     .top-bar .menu li > a {
-      padding: 34px 20px 34px;
+      padding: 54px 20px 14px;
       border-top: 2px solid #fefefe;
       border-bottom: 2px solid #fefefe;
       text-transform: uppercase;
@@ -4279,16 +4288,67 @@ body:before {
     top: -5px; }
     #header.small .top-bar-title #logo {
       width: 160px; }
-    #header.small #main-nav .menu li > a {
-      padding: 27px 20px 25px; }
-      #header.small #main-nav .menu li > a:before {
+    #header.small #main-navigation .is-drilldown {
+      min-height: 60px !important; }
+    #header.small #main-navigation .menu li > a {
+      padding: 37px 20px 15px; }
+      #header.small #main-navigation .menu li > a:before {
         padding-top: 10px; }
+    #header.small #main-navigation .menu.drilldown li > a {
+      padding: 20px 20px 15px !important; }
+      #header.small #main-navigation .menu.drilldown li > a:before {
+        padding-top: 20px;
+        padding-left: 100%; }
+    #header.small #main-navigation .menu.drilldown li.is-drilldown-submenu-parent > a:before {
+      position: absolute;
+      font-family: "FontAwesome";
+      content: "\f067";
+      top: 0;
+      left: 0;
+      margin-top: -16px;
+      display: block;
+      text-align: center;
+      color: #763C8E;
+      margin: 0 auto;
+      width: 100%;
+      height: 100%;
+      padding-top: 20px;
+      padding-left: 100%; }
+    #header.small #main-navigation .menu.drilldown li.is-drilldown-submenu-parent > a:after {
+      border: none; }
+    #header.small #main-navigation .menu.drilldown li.is-drilldown-submenu-parent > a:hover:before {
+      color: #fefefe; }
+    #header.small #main-navigation .menu.drilldown .is-drilldown-submenu .js-drilldown-back > a:before {
+      border: none; }
+    #header.small #main-navigation .menu.drilldown .is-drilldown-submenu .is-drilldown-submenu-item a:before {
+      padding-left: 0; }
+
+#subheader {
+  background: url(../images/subheaders/subheader-1-bg.jpg);
+  background-position-y: -670px;
+  height: 215px; }
+  #subheader h1 {
+    padding-top: 1rem;
+    font-size: 48px;
+    font-family: 'SourceSansProBold';
+    color: #fefefe; }
+
+#breadcrumbs {
+  background-color: #e6e6e6;
+  padding: 0 1rem;
+  margin-bottom: 1rem;
+  border-radius: 5px; }
+  #breadcrumbs i {
+    padding: 1rem 0.5rem; }
 
 #main {
-  margin-top: 89px; }
+  padding-top: 89px; }
   #main #content {
     padding: 1rem;
     background-color: #fefefe; }
+
+body.home #main #content {
+  padding: 0 15px; }
 
 #footer {
   background-color: #fefefe;
