--- a/user/themes/hafca/scss/_hafca.scss
+++ b/user/themes/hafca/scss/_hafca.scss
@@ -1,126 +1,22 @@
-body {
-  &:before {
-    background: $body-background-url no-repeat center center fixed;
-    background-size: cover;
-    display: block; content:""; position: absolute; z-index:-1;
-    top:0; left: 0; right: 0; height: rem-calc(600);
-    opacity:.3;
-  }
-}
-.top-bar {
-  border-top: 3px solid $warning-color;
-  padding: 0;
-  .top-bar-title {
-    color: $primary-color;
-    text-transform: uppercase;
-    font-size: 18px;
-    -webkit-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
-    background: transparent;
-    #logo {
-      margin: rem-calc(3) 0;
-    }
-    @include breakpoint(small only) {
-      line-height: inherit;
-      width: 100%;
-      font-size: 14px;
-    }
-  }
-  .menu {
-    font-size: rem-calc(14);
-    z-index: 20;
-    a {
-      color: $dark-gray;
-    }
-    li.active > a,
-    li:hover > a,
-    li:hover > a > a {
-      background-color: $purple;
-      color: $white;
-      border-bottom: 2px solid $purple;
-      position: relative;
-      &:before {
-        position: absolute;
-        font-family: "FontAwesome";
-        content: "\f067";
-        top: 0;
-        left: 0;
-        margin-top: -16px;
-        display: block;
-        text-align: center;
-        color: #fff;
-        margin: 0 auto;
-        width: 100%;
-        height: 100%;
-        padding-top: 20px;
-      }
-    }
-    li > a {
-      padding: 34px 20px 34px;
-      border-top: 2px solid $white;
-      border-bottom: 2px solid $white;
-      text-transform: uppercase;
-      -webkit-border-radius: 0;
-      -moz-border-radius: 0;
-      border-radius: 0;
-      margin-left: 0;
-      -webkit-transition: all 0.4s ease;
-      -moz-transition: all 0.4s ease;
-      -ms-transition: all 0.4s ease;
-      -o-transition: all 0.4s ease;
-      transition: all 0.4s ease;
-    }
-    ul.submenu li > a {
-      padding: 10px 20px !important;
-      border: 0;
-      &:before {
-        content: '';
-      }
-    }
-  }
-}
-#header {
-  -webkit-box-shadow: 0 0 5px 0 rgba(0,0,0,0.4);
-  box-shadow: 0 0 5px 0 rgba(0,0,0,0.4);
-  position: fixed;
-  top: 0;
-  z-index: 999;
-  min-width: 100%;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  &.small {
-    top: -5px;
-    .top-bar-title {
-      #logo {
-        width: 160px;
-      }
-    }
-    #main-nav {
-      // height: 75px;
-      .menu {
-        li {
-          > a {
-            &:before {
-              padding-top: 10px;
-            }
-            padding: 27px 20px 25px;
-          }
-        }
-      }
-    }
-  }
-  #main-nav {
-    // height: 93px;
-  }
-}
+@import 'hafca/global';
+@import 'hafca/header';
+@import 'hafca/breadcrumbs';
 
 
 #main {
-  margin-top: 89px;
+  padding-top: 89px;
   #content {
     padding: $global-padding;
     background-color: $white;
   }
+}
+body.home {
+  #main {
+    #content {
+      padding: 0 15px;
+    }
+  }
+
 }
 #footer {
   background-color: $white;
