--- a/user/themes/hafca/css/app.css
+++ b/user/themes/hafca/css/app.css
@@ -4211,7 +4211,7 @@ body:before {
   opacity: .3; }
 
 body #content {
-  box-shadow: 0px -5px 10px 10px rgba(0, 0, 0, 0.25); }
+  box-shadow: -7px 0px 10px 0px rgba(0, 0, 0, 0.25), 7px 0px 10px 0px rgba(0, 0, 0, 0.25); }
 
 .top-bar {
   border-top: 3px solid #763C8E;
