--- a/user/themes/hafca/scss/hafca/_global.scss
+++ b/user/themes/hafca/scss/hafca/_global.scss
@@ -7,8 +7,8 @@ body {
     opacity:.3;
   }
   #content {
-    -webkit-box-shadow: 0px -5px 10px 10px rgba(0,0,0,0.25);
-    -moz-box-shadow: 0px -5px 10px 10px rgba(0,0,0,0.25);
-    box-shadow: 0px -5px 10px 10px rgba(0,0,0,0.25);
+    -webkit-box-shadow: -7px 0px 10px 0px rgba(0, 0, 0, 0.25), 7px 0px 10px 0px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: -7px 0px 10px 0px rgba(0, 0, 0, 0.25), 7px 0px 10px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: -7px 0px 10px 0px rgba(0, 0, 0, 0.25), 7px 0px 10px 0px rgba(0, 0, 0, 0.25);
   }
 }
