--- a/user/themes/hafca/scss/hafca/_global.scss
+++ b/user/themes/hafca/scss/hafca/_global.scss
@@ -5,6 +5,7 @@ body {
     display: block; content:""; position: absolute; z-index:-1;
     top:0; left: 0; right: 0; height: 100%;
     opacity:.3;
+    -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
   }
   #content {
     -webkit-box-shadow: -7px 0px 10px 0px rgba(0, 0, 0, 0.25), 7px 0px 10px 0px rgba(0, 0, 0, 0.25);
