--- a/user/themes/hafca/scss/_settings.scss
+++ b/user/themes/hafca/scss/_settings.scss
@@ -98,6 +98,7 @@ $breakpoints: (
   large: 1024px,
   xlarge: 1200px,
   xxlarge: 1440px,
+  xxxlarge: 1920px,
 );
 $breakpoint-classes: (small medium large);
 
